Server URL now supports non-https

--- a/example.auth.yaml
+++ b/example.auth.yaml
@@ -3,4 +3,4 @@ pterodactyl:
   server_id1: abcdefgh 
   server_id2: 12345678
   # add up to 9 servers! server_id3, 4, 5, 6, 7
-  server_url: my.pterodactyl.server 
+  server_url: https://my.pterodactyl.server 
